--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ h3 {
 p {
   color: #121212;
   text-align: justify;
-  margin: 0 100px 30px 50px;
+  margin: 0 60px 30px 60px;
   line-height: 30px;
   font-size: 1.1rem;
   font-family: "Roboto", sans-serif;
@@ -45,4 +45,10 @@ h3 {
   text-align: center;
   color: #30475e;
   font-size: 1rem;
+}
+
+@media (max-width: 600px) {
+  p {
+    margin: 0 30px 30px 50px;
+  }
 }
